# TactilAI

./: README.md  pyproject.toml
tactilai/agents/: icm.py  network.py  ppo.py
tactilai/env/: grid.py  gym_wrapper.py  terrain.py  unit.py
tactilai/renderer/: pygame_renderer.py
tactilai/scripts/: eval.py  train.py
tactilai/training/: curriculum.py  elo.py  heuristic_bot.py  pool.py  selfplay.py
tests/agents/: test_icm.py  test_network.py  test_ppo.py
tests/env/: test_env.py  test_wrapper.py
tests/training/: test_curriculum.py  test_training.py
